tests/machine/x/fortran/list_set_ops.error
error: gfortran: exit status 1
/workspace/mochi/tests/machine/x/fortran/list_set_ops.f90:32:11:

   32 |     n = (/1,2,3/)(i)
      |           1
Error: Invalid character in name at (1)
/workspace/mochi/tests/machine/x/fortran/list_set_ops.f90:44:11:

   44 |     n = (/1,2,3/)(i)
      |           1
Error: Invalid character in name at (1)

